--- a/style.css
+++ b/style.css
@@ -64,7 +64,7 @@ a i {
     margin-left: 1150px;
     background: linear-gradient(to left, #302b63, #480048, #C04848, #1D2671);
     border-radius: 20px;
-    height: 550px;
+    height: 570px;
     width: 350px;
     margin-top: -290px;
     box-shadow: 10px 10px 10px 5px;
@@ -86,6 +86,12 @@ a i {
 }
 
 #pss {
+    background-color: cornsilk;
+    font-size: 15px;
+    box-shadow: 3px 3px 3px 3px rgb(32, 1, 32);
+}
+
+#rn {
     background-color: cornsilk;
     font-size: 15px;
     box-shadow: 3px 3px 3px 3px rgb(32, 1, 32);
